# Another_taskbar

./: .gitignore  Cargo.toml  LICENSE  NOTIFICATIONS.md  README.md  debug.keystore  dev.md  settings.toml  taskbar.json  tauri.conf.json
.cargo/: config.toml
docs/: ARCHITECTURE.md
locales/: en.toml  zh-CN.toml
src/: app.rs  app_paths.rs  bootstrap.rs  cli_display.rs  display.rs  files.rs  gui.rs  input_parse.rs  lib.rs  locale.rs  main.rs  platform.rs  symbols.rs  tasks.rs
src/app/: cli.rs  gui.rs  mod.rs  runtime.rs
src/gui/: app.rs  mod.rs  settings.rs  tauri_app.rs  theme.rs
src/gui/app/: detail_state.rs  mod.rs  update.rs
src/gui/views/: controls.rs  detail.rs  filter.rs  mod.rs  settings.rs  task_list.rs
src/input_parse/: commands.rs  mod.rs  prompts.rs  utils.rs
src/tasks/: filters.rs  manager.rs  mod.rs  model.rs  notifications.rs
tests/: app_mode_tests.rs  task_manager_recurrence_tests.rs  task_manager_sort_tests.rs  task_state_rules_tests.rs
tests/common/: mod.rs
themes/: .dark.toml  .light.toml  dark.toml  light.toml
ui/: MODULES.md  app.js  index.html  styles.css
ui/modules/: api.js  dom.js  state.js  time.js  utils.js
ui/styles/: base.css  components.css  interactions.css  layout.css  theme.css
