[package]
name = "another_taskbar"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "13.0"
iced = { version = "0.12", features = ["advanced", "debug"] }
iced_aw = { version = "0.9.3", default-features = false, features = ["modal"] }
toml = "0.8"
rfd = "0.14"
shlex = "1.3"
