[package]
name = "another_taskbar"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "18.0"
toml = "0.9.12"
shlex = "1.3"
tauri = { version = "2", features = [] }
