[package]
name = "another_taskbar"
version = "0.2.1"
edition = "2021"

[lib]
name = "another_taskbar"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.12"
shlex = "1.3"
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }

# Desktop-only dependencies
directories = { version = "6.0", optional = true }
rustyline = { version = "18.0", optional = true }
notify-rust = { version = "4", optional = true }

[features]
default = ["desktop"]
desktop = ["directories", "rustyline", "notify-rust"]
